// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputImage> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#F5F5F6",
            "color": "#e0e0e0",
          },
          false,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 2.5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 16,
            },
            Object {
              "color": "#707070",
            },
            Object {},
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 12,
              "lineHeight": 16,
            },
            false,
            Object {
              "color": "#d33c44",
            },
          ]
        }
      >
        Hello World
      </Text>
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          Object {
            "borderColor": "#d33c44",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 16,
          },
          Object {
            "color": "#707070",
          },
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputImage> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 2.5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 16,
            },
            Object {
              "color": "#707070",
            },
            Object {},
          ]
        }
      >
        Hello World
      </Text>
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#F5F5F6",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 3,
          "height": 60,
          "width": 60,
        },
      ]
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
        }
      }
      style={
        Object {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 3,
          "height": 60,
          "width": 60,
        }
      }
    />
    <ActivityIndicator
      animating={true}
      color="white"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          Object {
            "position": "absolute",
          },
          false,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "marginBottom": 10,
        },
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 10,
          },
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#e0e0e0",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontSize": 16,
            "fontWeight": "400",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="http://soyjavi.com/assets/images/soyjavi.jpg"
    />
  </View>
</View>
`;
